# ToolQA

./: pyproject.toml
data/questions/easy/: agenda-easy.jsonl  airbnb-easy.jsonl
dataset_generation/easy_questions/: easy_agenda.ipynb  easy_airbnb.ipynb  easy_coffee.ipynb  easy_scirex.ipynb
